Experimental: add use compact object headers and string deduplication to dockerfile